--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.config.import=optional:file:.env[.properties]
 
 jwt.secret=your-very-long-secret-key-minimum-32-characters-long
 jwt.expiration=86400000
+logging.level.org.springframework.security=DEBUG
